# CovidDailyUpdate

./: .env.gpg  .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
.github/workflows/: deploy.yml  test.yml
bot/: __main__.py  config.py  constants.py  indicators.py  processing.py  twitter.py
scripts/: decrypt_file.sh  deploy.sh  encrypt_file.sh  run.sh
src/: constants.py  main.py
tests/: test_data_processor.py  test_indicators.py  test_thread_twitter.py
